# masters-degree-project

./: .gitignore  README.md
contour_tracking/: CMakeLists.txt  parameterization.yml
contour_tracking/include/: Contour.h  ContourParticleFilter.h  Random.h  RegBasedContours.h  StateParams.h  VRmUsbCam.h
contour_tracking/src/: Contour.cpp  ContourParticleFilter.cpp  VRmUsbCam.cpp  contour_tracking.cpp
img_pos_tracking/: CMakeLists.txt
img_pos_tracking/include/: PosParticleFilter.h  Random.h
img_pos_tracking/src/: PosParticleFilter.cpp  Random.cpp  img_pos_tracking.cpp
localized_segm/: CMakeLists.txt  Doxyfile  parameterization.yml
localized_segm/include/: Contour.h  RegBasedContours.h  RegBasedContoursC3.h
localized_segm/src/: Contour.cpp  RegBasedContours.cpp  RegBasedContoursC3.cpp  localized_segm.cpp
pf_hist_ac/: CMakeLists.txt  Doxyfile  parameterization.yml  parameterization_c.yml
pf_hist_ac/include/: Constants.h  Contour.h  ContourEvolution.h  FourierDescriptor.h  Histogram.h  ObjectTracker.h  ParticleFilter.h  RegBasedContours.h  Selector.h  StateParams.h  hist.h
pf_hist_ac/matlab/: plothu.m
pf_hist_ac/src/: Contour.cpp  ContourEvolution.cpp  FourierDescriptor.cpp  Histogram.cpp  ObjectTracker.cpp  ParticleFilter.cpp  Random.cpp  RegBasedContours.cpp  Selector.cpp  hist.cpp  pf_hist_ac.cpp
vrm_record/: CMakeLists.txt
vrm_record/include/: VRmUsbCam.h
vrm_record/src/: VRmUsbCam.cpp  vrm_record.cpp
